# Revamp-Thesis-Internal

REVAMP/: README  install_json.sh  py_environment.txt  revamp_run.sh  revamp_run_6x6.sh  revamp_run_wo_synthesis_ex.sh
REVAMP/APPLICATIONS/applications_4x4/: ellpack_INNERMOST_LN11_PartPred_DFG.xml
REVAMP/APPLICATIONS/applications_6x6/: convolution2d_unroll_fac2_INNERMOST_LN11_PartPred_DFG.xml  ellpack_unroll_fac2_INNERMOST_LN11_PartPred_DFG.xml  gemm_unroll_fac4_INNERMOST_LN111_PartPred_DFG.xml
REVAMP/ARCHITECTURE_GENERATOR/: config.json  config_6x6.json  out.txt  out2.txt
REVAMP/ARCHITECTURE_GENERATOR/generated_architectures/: heterogeneous_CGRA_compute_L_0.json  heterogeneous_CGRA_compute_L_config_0.json  heterogeneous_CGRA_compute_L_network_0.json  heterogeneous_CGRA_compute_L_network_config_0.json
REVAMP/ARCHITECTURE_GENERATOR/generated_architectures_RTL_config/: heterogeneous_CGRA_compute_L_network_config_0.vh
REVAMP/ARCHITECTURE_GENERATOR/src/: CMakeLists.txt  DFG.cpp  DFG.h  PE.cpp  PE.h  algorithm.cpp  algorithm.h  architecture.cpp  architecture.h  jsonCreate.cpp  jsonCreate.h  main.cpp  main.h
REVAMP/HETEROGENEOUS_MAPPER/applications/: convolution2d_INNERMOST_LN11_PartPred_DFG.xml  gemm_INNERMOST_LN111_PartPred_DFG.xml  spmv_INNERMOST_LN11_PartPred_DFG.xml  stencil_INNERMOST_LN1111_PartPred_DFG.xml
REVAMP/HETEROGENEOUS_MAPPER/src/: CGRA.cpp  CGRA.h  CGRA_xml_compiler.cpp  CMakeLists.txt  DFG.cpp  DFG.h  DFGNode.cpp  DFGNode.h  DataPath.cpp  DataPath.h  FU.cpp  FU.h  HeuristicMapper.cpp  HeuristicMapper.h  Module.cpp  Module.h  PE.cpp  PE.h  PathFinderMapper.cpp  PathFinderMapper.h  Port.cpp  Port.h  RegFile.cpp  RegFile.h
REVAMP/HOMOGENEOUS_ARCHITECTURE/: hycube_original_4x4_torus.json  hycube_original_6x6_torus.json
REVAMP/HOMOGENEOUS_ARCHITECTURE/RTL/: cgra.sv  cgra_4x4.sv  cgra_6x6.sv  cgra_orig.sv  configuration.sv  hetero_config.v  hycube_v2.sv  load_store.sv  peArray.sv  regFile.sv  router.sv  simple_alu.sv  simple_alu_wrapper.sv  tile.sv  tile_v2.sv  xbar_bypass.sv  xbar_bypass_lsb.sv  xbar_bypass_msb.sv
REVAMP/analysis_reports/: dse.rpt
REVAMP/scripts/: installation.py  revamp_run_analysis_4x4.py  revamp_run_analysis_6x6.py  revamp_run_generator_4x4.py  revamp_run_generator_6x6.py  revamp_run_mapper_4x4.py  revamp_run_mapper_6x6.py  revamp_run_synthesis_4x4.py  revamp_run_synthesis_6x6.py
REVAMP/synthesis_scripts/: Makefile  area.rpt  cgra.sdc  common_setup.tcl  dc_4x4.tcl  dc_6x6.tcl  dc_setup_4x4.tcl  dc_setup_6x6.tcl  dc_setup_filenames.tcl  define_setup.tcl  power.rpt
(+7 files in other folders)
